utility.css
/* ... */
.scroll-snap, .scroll-snap-mandatory {
	-webkit-scroll-snap-type: mandatory;
	scroll-snap-type: mandatory;
}

.scroll-snap-proximity {
	-webkit-scroll-snap-type: proximity;
	scroll-snap-type: proximity;
}

.scroll-snap-vertical {
	-webkit-scroll-snap-points-y: repeat(100vh);
	scroll-snap-points-y: repeat(100vh);
}

.scroll-snap-horizontal {
	-webkit-scroll-snap-points-x: repeat(100vw);
	scroll-snap-points-x: repeat(100vw);
}


/*============================= Float rules =======================*/
.float-left {
	float: left;
}

.float-right {
	float: right;
}

.float-none {
	float: none;
}

.clear-left {
	clear: left;
}

.clear-right {
	clear: right;
}

.clear-both {
	clear: both;
}

/*=========================== Position rules =============================*/

.fixed {
	position: fixed;
}

.relative {
	position: relative;
}

.absolute {
	position: absolute;
}

.sticky {
	position: sticky;
	margin-top: 0;
}

@media screen and (min-width: 800px) {
	.sticky-desktop {
		position: sticky;
		margin-top: 0;
	}
}

@media screen and (max-width: 800px) {
	.sticky-mobile {
		position: sticky;
		margin-top: 0;
	}
}

.z-0 {
	z-index: 0;
}

.z-1 {
	z-index: 1;
}

.z-2 {
	z-index: 2;
}

.z-3 {
	z-index: 3;
}

.z-4 {
	z-index: 4;
}

.z-top {

	/* Please do not exceed this */

	z-index: var(--z-top, 9999);
}

/* Only to be used for things such as `<dialog>` */

.z-max {
	z-index: 2147483647;
}

.top {
	top: 0;
}

.bottom {
	bottom: 0;
}

.left {
	left: 0;
}

.right {
	right: 0;
}

/*=========================== Overflow rules =============================*/

.overflow-hidden {
	overflow: hidden;
}

.overflow-visible {
	overflow: visible;
}

.overflow-scroll {
	overflow: scroll;
}

.overflow-auto {
	overflow: auto;
}

.overflow-x-hidden {
	overflow-x: hidden;
}

.overflow-x-visible {
	overflow-x: visible;
}

.overflow-x-scroll {
	overflow-x: scroll;
}

.overflow-x-auto {
	overflow-x: auto;
}

.overflow-y-hidden {
	overflow-y: hidden;
}

.overflow-y-visible {
	overflow-y: visible;
}

.overflow-y-scroll {
	overflow-y: scroll;
}

.overflow-y-auto {
	overflow-y: auto;
}

/*=========================== Object Fit =========================*/
.fit-contain {
	object-fit: contain;
}

.fit-cover {
	object-fit: cover;
}

.fit-fill {
	object-fit: fill;
}

.fit-none {
	object-fit: none;
}

.fit-scale-down {
	object-fit: scale-down;
}

/*=========================== Opacity rules ========================*/
.opacity-100 {
	opacity: 1;
}

.opacity-90 {
	opacity: 0.9;
}

.opacity-80 {
	opacity: 0.8;
}

.opacity-70 {
	opacity: 0.7;
}

.opacity-60 {
	opacity: 0.6;
}

.opacity-50 {
	opacity: 0.5;
}

.opacity-40 {
	opacity: 0.4;
}

.opacity-30 {
	opacity: 0.3;
}

.opacity-20 {
	opacity: 0.2;
}

.opacity-10 {
	opacity: .1;
}

.opacity-0, .transparent {
	opacity: 0;
}

/*================================== Text rules ==========================*/
.text-align-left {
	text-align: left;
}

.text-align-right {
	text-align: right;
}

.text-align-center {
	text-align: center;
}

.text-align-justify {
	text-align: justify;
}

.text-align-justify-all {
	text-align: justify-all;
}

.text-align-start {
	text-align: start;
}

.text-align-end {
	text-align: end;
}

.text-decoration-solid {
	text-decoration-style: solid;
}

.text-decoration-wavy {
	text-decoration-style: wavy;
}

.text-decoration-dotted {
	text-decoration-style: dotted;
}

.text-decoration-dashed {
	text-decoration-style: dashed;
}

.text-decoration-double {
	text-decoration-style: double;
}

.no-text-decoration, .no-text-decoration * {
	text-decoration: none;
}

.underline {
	text-decoration-line: underline;
}

.overline {
	text-decoration-line: overline;
}

.line-through {
	text-decoration-line: line-through;
}

.optimize-speed {
	text-rendering: optimizeSpeed;
}

.optimize-legibility {
	text-rendering: optimizeLegibility;
}

.geometric-precision {
	text-rendering: geometricPrecision;
}

.capitalize {
	text-transform: capitalize;
}

.uppercase {
	text-transform: uppercase;
}

.lowercase {
	text-transform: lowercase;
}

.center, .align-center {
	text-align: center;
}

.align-left {
	text-align: left;
}

.align-right {
	text-align: right;
}

.indent {
	text-indent: var(--indent, 4ch);
}

.indent-all {
	text-indent: var(--indent, 4ch) each-line;
}

.indent-hanging {
	text-indent: var(--indent, 4ch) hanging;
}

.resizeable {
	resize: both;
	overflow: auto;
}

/*========================= Layout & display rules ==========================*/

.block:not([hidden]) {
	display: block;
}

.inline:not([hidden]) {
	display: inline;
}

.inline-block:not([hidden]) {
	display: inline-block;
}

.grid:not([hidden]) {
	display: grid;
}

.inline-grid:not([hidden]) {
	display: inline-grid;
}

@supports (display: flex) {
	.flex:not([hidden]) {
		display: flex;
	}

	.flex.row {
		flex-direction: row;
	}

	.flex.column {
		flex-direction: column;
	}

	.flex.wrap {
		flex-wrap: wrap;
	}

	.flex.no-wrap {
		flex-wrap: nowrap;
	}

	.flex.wrap-reverse {
		flex-wrap: wrap-reverse;
	}

	.flex .center {
		align-self: center;
	}

	.flex.justify-space-around, .flex.space-around {
		justify-content: space-around;
	}

	.flex.justify-space-between, .flex.space-between {
		justify-content: space-between;
	}

	.flex.justify-space-evenly, .flex.space-evenly {
		justify-content: space-evenly;
	}

	.flex.justify-center {
		justify-content: center;
	}

	.flex .grow-0 {
		flex-grow: 0;
	}

	.flex .grow-1 {
		flex-grow: 1;
	}

	.flex .grow-2 {
		flex-grow: 2;
	}

	.flex .grow-3 {
		flex-grow: 3;
	}

	.flex .grow-4 {
		flex-grow: 4;
	}

	.flex .grow-5 {
		flex-grow: 5;
	}

	.flex .shrink-0 {
		flex-shrink: 0;
	}

	.flex .shrink-1 {
		flex-shrink: 1;
	}

	.flex .shrink-2 {
		flex-shrink: 2;
	}

	.flex .shrink-3 {
		flex-shrink: 3;
	}

	.flex .shrink-4 {
		flex-shrink: 4;
	}

	.flex .shrink-5 {
		flex-shrink: 5;
	}
}
/* ... */

